# docker_actions_example

./: Dockerfile  README.md  pyproject.toml  setting.py
.github/workflows/: docker.yml
docker_actions_example/: main.py
